--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,11 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-  
+
+defaults:
+ run:
+  working-directory: ./cise_ass1a_worksheet2-frontend
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,9 +21,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      
-      - name: Change to react directory
-        run: cd cise_ass1a_worksheet2-frontend
       
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
